WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232544
Fix :host invalidation when combined with pseudo classes in descendant position
https://bugs.webkit.org/show_bug.cgi?id=232544
Summary
Fix :host invalidation when combined with pseudo classes in descendant position
Antti Koivisto
Reported
2021-10-31 03:07:04 PDT
imported/w3c/web-platform-tests/css/css-scoping/host-functional-descendant-invalidation.html
Attachments
Patch
(4.87 KB, patch)
2021-10-31 03:11 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-10-31 03:11:42 PDT
Created
attachment 442933
[details]
Patch
EWS
Comment 2
2021-10-31 23:20:49 PDT
Committed
r285100
(
243742@main
): <
https://commits.webkit.org/243742@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442933
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-31 23:21:21 PDT
<
rdar://problem/84870685
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug