Fix :host invalidation when combined with pseudo classes in descendant position https://bugs.webkit.org/show_bug.cgi?id=232544

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-scoping/host-functional-descendant-invalidation-expected.txt:

Source/WebCore:

* style/RuleSet.cpp:
(WebCore::Style::isHostSelectorMatchingInShadowTree):

Make more readable and accurate.

(WebCore::Style::RuleSet::addRule):

Compute m_hasHostPseudoClassRulesMatchingInShadowTree before bailing out for pseudo elements.



Canonical link: https://commits.webkit.org/243742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285100 268f45cc-cd09-0410-ab3c-d52691b4dbfc